[package]
name = "dv-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
clap = { version = "4.0", features = ["derive"] }
internment = { version = "0.8", features = ["serde"] }
itertools = "0.14.0"
maud = "0.27"
rsass = "0.29"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
